@@ -92,6 +92,12 @@
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
         </dependency>
+        
+        <dependency>
+            <groupId>de.sciss</groupId>
+            <artifactId>weblaf-ui</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
